--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Culculate</title>
+    <link rel="stylesheet" href="./css/style.css" type = "text/css">
+    
+    <title>Document</title>
 </head>
 <body>
-    
-    <script src = "js\script.js"></script>      
+    <div class="content">
+        <div class = "group">
+            <!-- <div class="header"> Header</div>
+            <div class="card">1</div>
+            <div class="card">2</div>
+            <div class="card">3</div>
+            <div class="card">4</div>
+            <div class="footer"> Footer</div> -->
+        </div>
+    </div>
+    <script src = "./js/script.js"></script>      
 </body>
 </html> 
