connect gulp, ESLint, sass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="content">
         <div class = "group">
-            <div class="header"> Header</div>
+            <!-- <div class="header"> Header</div>
             <div class="card">
                 <div class="card-header">
                     <progress max="100" value="10">Progress bar</progress>
@@ -36,18 +36,16 @@
                     <img class = "card-img" src="" alt="avatar">
                 </div>    
             </div>
-            <div class="footer"> Footer</div>
+            <div class="footer"> Footer</div> -->
         </div>
     </div>
     <button onclick="addCard()">Add card</button>
-    <script>
+    <!-- <script>
         function setClassOnBody() {
             var body = document.getElementsByTagName('body')[0];
-           // body.className = body.className ? '':'class1';
-           
+           // body.className = body.className ? '':'class1';           
         }
-
-    </script>
+    </script> -->
     <script src = "./js/script.js"></script>      
 </body>
 </html> 
