--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 <body>
     <div class="content">
         <div class = "group">
-            <!-- <div class="header"> Header</div>
+            <!-- <div class="header"> <h3>Titel</h3> </div>
             <div class="card">
                 <div class="card-header">
                     <progress max="100" value="10">Progress bar</progress>
-                    <div class = "card-title">
-                        title 1
-                    </div>
-                </div>  
+                    <span>X</span>
+                </div> 
+                <div class = "card-title">
+                    <h4>Titel</h4>
+                </div> 
                 <div class = "card-footer">
                     <button class = "card-edit">
                         ...
@@ -36,10 +37,10 @@
                     <img class = "card-img" src="" alt="avatar">
                 </div>    
             </div>
-            <div class="footer"> Footer</div> -->
+            <div class="footer" onclick = "addCard()"> Add card</div> -->
         </div>
     </div>
-    <button onclick="addCard()">Add card</button>
+    <!-- <button onclick="addCard()">Add card</button> -->
     <!-- <script>
         function setClassOnBody() {
             var body = document.getElementsByTagName('body')[0];
