--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="content">
-        <div class = "group">
+        <div class = "group-1" ondrop = "cardDrop(event)" ondragover = "ondraDover(event)">
             <!-- <div class="header"> <h3>Titel</h3> </div>
             <div class="card">
                 <div class="card-header">
@@ -39,8 +39,9 @@
             </div>
             <div class="footer" onclick = "addCard()"> Add card</div> -->
         </div>
+        <div class = "group-2" ondrop = "cardDrop(event)" ondragover = "onDragOver(event)">
+        </div>
     </div>
-    <!-- <button onclick="addCard()">Add card</button> -->
     <!-- <script>
         function setClassOnBody() {
             var body = document.getElementsByTagName('body')[0];
