--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ondrop = "cardDrop()">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,6 +36,11 @@
             <div class="footer" onclick = "addCard()"> Add card</div> -->
         </div>
     </div>
-    <script src = "./js/script.js"></script>      
+    <script src = "./js/script.js"></script>
+    <script>
+        function submit(event) {
+            console.log(event);
+        };
+    </script>      
 </body>
 </html> 
